when using default formatResult the matching substring is now wrapped in span with class select2-match. fixes issue #137

--- a/select2.css
+++ b/select2.css
@@ -464,3 +464,5 @@ disabled look for already selected choices in the results dropdown
     display: none;
 }
 /* end multiselect */
+
+.select2-match { text-decoration: underline; }
